Added redis cache to all product functionalities